--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This was created by Andries to show that this thing works.</p>
             <img class="portrait" src="/img/robot.png">
         </div>
         {{>footer}}
